--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design</title>
     <title>W3.CSS Template</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     
@@ -158,6 +158,6 @@
     
    </footer>
   
-   <script type="text/javascript" src="/js/scrip.js"></script> 
+   <script type="text/javascript" src="./js/scrip.js"></script> 
 </body>
 </html>
